src/objects/MX_RTE_Check_List_Modulo__c.object
<CustomObject>
    <description>Objeto donde se encuentra la información necesaria del RCI</description>
    <fields>
        <fullName>MX_RTE_Area__c</fullName>
        <description>Área que solicita el RSI</description>
        <label>Área que solicita</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Seguros</fullName>
                </value>
                <value>
                    <fullName>Hipotecario</fullName>
                </value>
                <value>
                    <fullName>CRM</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MX_RTE_Cat_logo__c</fullName>
        <description>Catálogo de RCI</description>
        <label>Catálogo</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>MSA</fullName>
                </value>
                <value>
                    <fullName>Contrato</fullName>
                </value>
                <value>
                    <fullName>Dictamen Jurídico</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MX_RTE_Comite_ARO__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Comité ARO</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MX_RTE_Dias_de_Retraso__c</fullName>
        <formula>IF(
(TODAY() -  MX_RTE_Fecha_de_Compromiso__c )&lt;0 || ( MX_RTE_Fecha_de_cumplimiento__c  -MX_RTE_Fecha_de_Compromiso__c) &lt; 0,
0,
IF( ISBLANK(MX_RTE_Fecha_de_cumplimiento__c),TODAY()- MX_RTE_Fecha_de_Compromiso__c, MX_RTE_Fecha_de_cumplimiento__c - MX_RTE_Fecha_de_Compromiso__c)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Días de Retraso</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MX_RTE_Estatus__c</fullName>
        <description>Estatus del RCI</description>
        <label>Estatus</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pendiente</fullName>
                </value>
                <value>
                    <fullName>En proceso</fullName>
                </value>
                <value>
                    <fullName>Atendida</fullName>
                </value>
                <value>
                    <fullName>Desestimada</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MX_RTE_Feature__c</fullName>
        <description>Campo de principal detalle con Casos</description>
        <label>Feature</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Pedidos</relationshipLabel>
        <relationshipName>M_dulos_RCI</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>MX_RTE_Fecha_de_Compromiso__c</fullName>
        <description>Fecha de compromiso para el cumplimiento del Módulo RCI</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Fecha de Compromiso</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MX_RTE_Fecha_de_cumplimiento__c</fullName>
        <description>Fecha de cumplimiento de RCI</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Fecha de cumplimiento</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MX_RTE_Infraccion__c</fullName>
        <formula>IF(  MX_RTE_Dias_de_Retraso__c &gt; 0, IMAGE(&quot;https://bancomer-retail--wfc--c.cs25.content.force.com/servlet/servlet.ImageServer?id=0151b0000008Rid&amp;oid=00D1b0000008s40&amp;lastMod=1553254868000&quot;, &quot;HAY UN RETRASO EN LA FECHA DE CUMPLIMIENTO RESPECTO A LA FECHA DE COMPROMISO&quot;, 30, 30)
, IMAGE(&quot;https://bancomer-retail--wfc--c.cs25.content.force.com/servlet/servlet.ImageServer?id=0151b0000008UzQ&amp;oid=00D1b0000008s40&amp;lastMod=1554348738000&quot;, &quot;La fecha de cumplimiento aún no supera la fecha de compromiso&quot;, 30, 30)  )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Infracción</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MX_RTE_Justificaci_n_de_Cambio_de_Fecha__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Justificación de Cambio de Fecha</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MX_RTE_Mesa_de_especialistas__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Mesa de especialistas</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MX_RTE_Notas_Observaciones__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Notas/Observaciones</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>MX_RTE_Organo_de_sanci_n__c</fullName>
        <description>Órgano de sanción</description>
        <label>Estatus</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>En Proceso</fullName>
                    <default>true</default>
                    <label>En Proceso</label>
                </value>
                <value>
                    <fullName>Aprobado</fullName>
                </value>
                <value>
                    <fullName>Comité ARO</fullName>
                    <isActive>false</isActive>
                    <label>Comité ARO</label>
                </value>
                <value>
                    <fullName>Documentación</fullName>
                    <isActive>false</isActive>
                    <label>Documentación</label>
                </value>
                <value>
                    <fullName>Mesa de especialistas</fullName>
                    <isActive>false</isActive>
                    <label>Mesa de especialistas</label>
                </value>
                <value>
                    <fullName>RCI/Contraloría</fullName>
                    <isActive>false</isActive>
                    <label>RCI/Contraloría</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MX_RTE_Otro__c</fullName>
        <description>Campo para escribir otra opción que no esté sugerida.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Otro</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MX_RTE_Pedido__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Campo de lookup en checklist módulo para asociarle un pedido</description>
        <label>Pedido</label>
        <referenceTo>MX_RTE_Pedido_RCI__c</referenceTo>
        <relationshipLabel>Features</relationshipLabel>
        <relationshipName>Check_List_M_dulos</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MX_RTE_RCI_Contraloria__c</fullName>
        <defaultValue>false</defaultValue>
        <label>RCI/Contraloría</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MX_RTE_Tipo__c</fullName>
        <description>Tipo de RCI</description>
        <label>Tipo</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Presente</fullName>
                </value>
                <value>
                    <fullName>Subsecuente</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MX_RTE_Tipo_de_Registro_del_Pedido__c</fullName>
        <description>Campo para identificar a que tipo de registro pertenece el pedido</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Tipo de Registro del Pedido</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MX_RTE_Validado_Por_Mesa__c</fullName>
        <defaultValue>false</defaultValue>
        <description>¿El checklist está validado por la mesa de especialistas?</description>
        <label>¿Validado por mesa de especialistas?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MX_RTE_Validado__c</fullName>
        <defaultValue>false</defaultValue>
        <description>¿Está validado el RCI?</description>
        <label>Validado</label>
        <type>Checkbox</type>
    </fields>
    <label>Check List Módulo</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>MX_RTE_Asunto__c</columns>
        <columns>MX_RTE_Iniciativa__c</columns>
        <columns>MX_RTE_Notas_Observaciones__c</columns>
        <filterScope>Everything</filterScope>
        <label>Checklist en Proceso</label>
    </listViews>
    <nameField>
        <displayFormat>MOD-{000000}</displayFormat>
        <label>Folio</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Check List Módulos</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>MX_RTE_Justificar_Cambio_de_Fecha</fullName>
        <active>true</active>
        <description>Justifica el cambio de fecha de Cumplimiento</description>
        <errorConditionFormula>NOT(ISBLANK(PRIORVALUE( MX_RTE_Fecha_de_cumplimiento__c)))&amp;&amp;  ISCHANGED(MX_RTE_Fecha_de_cumplimiento__c) &amp;&amp; ISBLANK( MX_RTE_Justificaci_n_de_Cambio_de_Fecha__c )</errorConditionFormula>
        <errorDisplayField>MX_RTE_Justificaci_n_de_Cambio_de_Fecha__c</errorDisplayField>
        <errorMessage>Justifica el cambio de fecha de Cumplimiento</errorMessage>
    </validationRules>
</CustomObject>